made some changes to the user interface

--- a/contact.html
+++ b/contact.html
@@ -104,14 +104,13 @@
 		
 	</div>
 	<!-- end:fh5co-header -->
-	<div class="fh5co-parallax" style="background-image: url(images/slider1.jpg);" data-stellar-background-ratio="0.5">
+	<div class="fh5co-parallax" style="background-image: url(images/contact.jpeg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 					<div class="fh5co-intro fh5co-table-cell">
-						<h1 class="text-center">Contact Us</h1>
-						<p>YOUR TEXT HERE | YOUR TEXT HERE |</a></p>				
+						<h1 class="text-center">Contact Us</h1>				
 						</div>
 				</div>
 			</div>
