--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="copyright">
-						<p><small>&copy; 2018 Responsive Hotel Site Template. <br>
+						<p><small>&copy; 2022 Hotel Paradise. <br>
 					</div>
 				</div>
 				<div class="col-md-6">
