changes to html file

--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Luxe</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">Paradise</a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="index.html">Home</a></li>
@@ -125,10 +125,9 @@
 			<div class="col-md-6">
 				<div class="col-md-12">
 					<h3>Our Address</h3>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 					<ul class="contact-info">
 						<li><i class="ti-map"></i>198 West 21th Street, Suite 721 New York NY 10016</li>
-						<li><i class="ti-mobile"></i>+ 1235 2355 98</li>
+						<li><i class="ti-mobile"></i>+91 9494 752 864</li>
 						<li><i class="ti-envelope"></i><a href="#">info@yoursite.com</a></li>
 						<li><i class="ti-home"></i><a href="#">www.yoursite.com</a></li>
 					</ul>
@@ -184,7 +183,7 @@
 						<div class="col-md-3">
 							<h3>Our Facilities</h3>
 							<ul class="link">
-								<li><a href="#">Resturant</a></li>
+								<li><a href="#">Restaurant</a></li>
 								<li><a href="#">Bars</a></li>
 								<li><a href="#">Pick-up</a></li>
 								<li><a href="#">Swimming Pool</a></li>
@@ -194,7 +193,7 @@
 						</div>
 						<div class="col-md-6">
 							<h3>Subscribe</h3>
-							<p>Sed cursus ut nibh in semper. Mauris varius et magna in fermentum. </p>
+							<p>Follow us here</p>
 							<form action="#" id="form-subscribe">
 								<div class="form-field">
 									<input type="email" placeholder="Email Address" id="email">
