removed the hover effect

--- a/login.html
+++ b/login.html
@@ -54,11 +54,15 @@
 										<button type ="submit" class="btn btn-primary btn-block" onclick="validate()">Login</button>
 
 										<br>
-										<p class="register"> No Username and Password? Register Here For Free!</p>										
+										<p> <font color=white><font size=3px;>No Username and Password? Register Here For Free!</p>										
 										<button type="submit" formaction="registration.html" class="btn btn-primary btn-block">Register Now</button>
+										
 									</br>
+
 									</div>
+
 								</div>
+
 							</form>
 						</div>
 					</div>
