added a new font

--- a/login.html
+++ b/login.html
@@ -15,6 +15,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Wendy+One" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<section class="con">
@@ -33,7 +36,6 @@
 								<div class="col-md-10 mb-5">
 									<div class="wrapper">
 										<input type="text"  id="username" class="in" placeholder="Username">
-										 <span class="underline"></span>
 										</div>
 
 								</div>
@@ -67,8 +69,7 @@
 						</div>
 					</div>
 				</div>
-		</section>
-		
+		</section>	
 	</body>
 	<!-- Scripts in case you need them :P -->
 	<!-- Jquery -->
