changed the alignment

--- a/login.html
+++ b/login.html
@@ -36,7 +36,8 @@
 								<div class="col-md-10 mb-5">
 									<div class="wrapper">
 										<input type="text"  id="username" class="in" placeholder="Username">
-										</div>
+										<br>
+									</div>
 
 								</div>
 								</div>
@@ -54,24 +55,20 @@
 								<div class="form-group row justify-content-center">
 									<div class="col-md-6">
 										<button type ="submit" class="btn btn-primary btn-block" onclick="validate()">Login</button>
-
 										<br>
-										<p> <font color=white><font size=3px;>No Username and Password? Register Here For Free!</p>										
+										<br>
+										<p> <font color=white><font size=3px;>No Username and Password? Register Here For Free!</p>	
+										<br>									
 										<button type="submit" formaction="registration.html" class="btn btn-primary btn-block">Register Now</button>
-										
-									</br>
-
 									</div>
-
 								</div>
-
 							</form>
 						</div>
 					</div>
 				</div>
 		</section>	
 	</body>
-	<!-- Scripts in case you need them :P -->
+	<!-- Scripts-->
 	<!-- Jquery -->
 	<script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
 	<!-- Tether -->
