--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
 		<!-- Font awesome -->
 		<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-		<link rel="stylesheet" type="text/css" href="css/login1.css">
+		<link rel="stylesheet" type="text/css" href="css/login.css">
 
 		<!-- Google Fonts -->
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -17,7 +17,7 @@
 		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Noto+Serif+Khojki:wght@600&family=Noto+Serif:ital,wght@0,400;0,700;1,700&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<section class="con">
@@ -25,8 +25,8 @@
 				<div class="container">
 
 					<div class="row justify-content-center">
-						<div class="col-md-8 p-3 mt-5">
-							<h2 class="text-center display-3">Login</h2>
+						<div>
+							<h2 class="login">Login</h2>
 						</div>
 					</div>
 					<div class="row h-50 justify-content-center">
@@ -57,7 +57,7 @@
 										<button type ="submit" class="btn btn-primary btn-block" onclick="validate()">Login</button>
 										<br>
 										<br>
-										<p> <font color=white><font size=3px;>No Username and Password? Register Here For Free!</p>	
+										<p class ="no-cred"> No Username and Password? <br> Register Here For Free!</p>	
 										<br>									
 										<button type="submit" formaction="registration.html" class="btn btn-primary btn-block">Register Now</button>
 									</div>
