changed the text

--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Responsive HTML5 Template</title>
+    <title>Paradise Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
     <meta
@@ -81,61 +81,6 @@
                 <nav id="fh5co-menu-wrap" role="navigation">
                   <ul class="sf-menu" id="fh5co-primary-menu">
                     <li><a href="index.html">Home</a></li>
-                    <li>
-                      <a href="hotel.html" class="fh5co-sub-ddown">Hotel</a>
-                      <ul class="fh5co-sub-menu">
-                        <li><a href="#">Luxe Hotel</a></li>
-                        <li><a href="#">Deluxe Hotel</a></li>
-                        <li>
-                          <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                          <ul class="fh5co-sub-menu">
-                            <li>
-                              <a
-                                href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template"
-                                target="_blank"
-                                >Build</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap"
-                                target="_blank"
-                                >Work</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap"
-                                target="_blank"
-                                >Light</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap"
-                                target="_blank"
-                                >Relic</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap"
-                                target="_blank"
-                                >Display</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap"
-                                target="_blank"
-                                >Sprint</a
-                              >
-                            </li>
-                          </ul>
-                        </li>
-                        <li><a href="#">Five Star Hotel</a></li>
-                      </ul>
-                    </li>
                     <li><a href="services.html">Services</a></li>
                     <li><a class="active" href="contact.html">Contact</a></li>
                     <li><a href="login.html">Login</a></li>
@@ -168,15 +113,27 @@
         <div id="fh5co-contact-section">
           <div class="row">
             <div class="col-md-6">
-              <div id="map" class="fh5co-map"></div>
+              <div class="map-container">
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d658.4495259163979!2d83.31724126922457!3d17.73346062093181!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3943487a3fc405%3A0xcea048c120af5b6a!2s52-11-13%2F4%2C%20Resapuvanipalem%2C%20Dwaraka%20Nagar%2C%20Visakhapatnam%2C%20Andhra%20Pradesh%20530013!5e0!3m2!1sen!2sin!4v1670048689512!5m2!1sen!2sin"
+                  width="600"
+                  height="450"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
+              </div>
             </div>
             <div class="col-md-6">
               <div class="col-md-12">
                 <h3>Our Address</h3>
                 <ul class="contact-info">
                   <li>
-                    <i class="ti-map"></i>Opposite of ABC Park, XYz Street,
-                    QWERTY
+                    <i class="ti-map"></i>52-11-13/4, Resapuvanipalem, Dwaraka
+                    Nagar,
+                    <br />
+                    Visakhapatnam, Andhra Pradesh 530013, India
                   </li>
                   <li><i class="ti-mobile"></i>+91 9494 752 864</li>
                   <li>
@@ -257,7 +214,6 @@
                     <h3>Our Facilities</h3>
                     <ul class="link">
                       <li><a href="#">Restaurant</a></li>
-                      <li><a href="#">Bars</a></li>
                       <li><a href="#">Pick-up</a></li>
                       <li><a href="#">Swimming Pool</a></li>
                       <li><a href="#">Spa</a></li>
