--- a/services.html
+++ b/services.html
@@ -6,13 +6,8 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Responsive HTML5 Template</title>
+	<title>Paradise Services</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
-	<meta name="author" content="FREEHTML5.CO" />
-
-
   	<!-- Facebook and Twitter integration -->
 	<meta property="og:title" content=""/>
 	<meta property="og:image" content=""/>
@@ -69,29 +64,10 @@
 			<div class="container">
 				<div class="nav-header">
 					<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
-					<h1 id="fh5co-logo"><a href="index.html">Luxe</a></h1>
+					<h1 id="fh5co-logo"><a href="index.html">Paradise</a></h1>
 					<nav id="fh5co-menu-wrap" role="navigation">
 						<ul class="sf-menu" id="fh5co-primary-menu">
 							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="hotel.html" class="fh5co-sub-ddown">Hotel</a>
-								<ul class="fh5co-sub-menu">
-								 	<li><a href="#">Luxe Hotel</a></li>
-								 	<li><a href="#">Deluxe Hotel</a></li>
-									<li>
-										<a href="#" class="fh5co-sub-ddown">King Hotel</a>
-										<ul class="fh5co-sub-menu">
-											<li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-											<li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-											<li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-											<li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-											<li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-											<li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-										</ul>
-									</li>
-									<li><a href="#">Five Star Hotel</a></li> 
-								</ul>
-							</li>
 							<li><a class="active" href="services.html">Services</a></li>
 							<li><a href="contact.html">Contact</a></li>
 							<li><a href="login.html">Login</a></li>
@@ -110,7 +86,6 @@
 				<div class="col-md-12 col-md-offset-0 col-sm-12 col-sm-offset-0 col-xs-12 col-xs-offset-0 text-center fh5co-table">
 					<div class="fh5co-intro fh5co-table-cell">
 						<h1 class="text-center">We Offer Services</h1>
-						<p>YOUR TEXT HERE | YOUR TEXT HERE |</a></p>
 					</div>
 				</div>
 			</div>
@@ -184,7 +159,7 @@
 			<div class="row">
 				<div class="col-md-3">
 					<div class="copyright">
-						<p><small>&copy; 2018 Responsive Hotel Site Template. <br>
+						<p><small>&copy; 2022 Hotel Paradise. <br>
 					</div>
 				</div>
 				<div class="col-md-6">
@@ -202,7 +177,6 @@
 							<h3>Our Facilities</h3>
 							<ul class="link">
 								<li><a href="#">Resturant</a></li>
-								<li><a href="#">Bars</a></li>
 								<li><a href="#">Pick-up</a></li>
 								<li><a href="#">Swimming Pool</a></li>
 								<li><a href="#">Spa</a></li>
@@ -211,7 +185,7 @@
 						</div>
 						<div class="col-md-6">
 							<h3>Subscribe</h3>
-							<p>Sed cursus ut nibh in semper. Mauris varius et magna in fermentum. </p>
+							<p>Follow us here </p>
 							<form action="#" id="form-subscribe">
 								<div class="form-field">
 									<input type="email" placeholder="Email Address" id="email">
