--- a/index.html
+++ b/index.html
@@ -10,13 +10,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
-    <meta
-      name="keywords"
-      content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive"
-    />
-    <meta name="author" content="FREEHTML5.CO" />
-
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content="" />
     <meta property="og:image" content="" />
@@ -57,61 +50,6 @@
                 <nav id="fh5co-menu-wrap" role="navigation">
                   <ul class="sf-menu" id="fh5co-primary-menu">
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li>
-                      <a href="hotel.html" class="fh5co-sub-ddown">Hotel</a>
-                      <ul class="fh5co-sub-menu">
-                        <li><a href="#">Luxe Hotel</a></li>
-                        <li><a href="#">Deluxe Hotel</a></li>
-                        <li>
-                          <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                          <ul class="fh5co-sub-menu">
-                            <li>
-                              <a
-                                href="http://code-projects.org/"
-                                target="_blank"
-                                >Build</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://code-projects.org/"
-                                target="_blank"
-                                >Work</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://code-projects.org/"
-                                target="_blank"
-                                >Light</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://code-projects.org/"
-                                target="_blank"
-                                >Relic</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://code-projects.org/"
-                                target="_blank"
-                                >Display</a
-                              >
-                            </li>
-                            <li>
-                              <a
-                                href="http://code-projects.org/"
-                                target="_blank"
-                                >Sprint</a
-                              >
-                            </li>
-                          </ul>
-                        </li>
-                        <li><a href="#">Five Star Hotel</a></li>
-                      </ul>
-                    </li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="login.html">Login</a></li>
@@ -681,7 +619,7 @@
               <div class="col-md-3">
                 <div class="copyright">
                   <p>
-                    <small> &copy; 2018 Responsive Hotel Site Template. </small>
+                    <small> &copy; 2022 Hotel Paradise. </small>
                   </p>
                 </div>
               </div>
@@ -700,7 +638,6 @@
                     <h3>Our Facilities</h3>
                     <ul class="link">
                       <li><a href="#">Resturant</a></li>
-                      <li><a href="#">Bars</a></li>
                       <li><a href="#">Pick-up</a></li>
                       <li><a href="#">Swimming Pool</a></li>
                       <li><a href="#">Spa</a></li>
@@ -709,10 +646,7 @@
                   </div>
                   <div class="col-md-6">
                     <h3>Subscribe</h3>
-                    <p>
-                      Sed cursus ut nibh in semper. Mauris varius et magna in
-                      fermentum.
-                    </p>
+                    <p>Follow us here</p>
                     <form action="#" id="form-subscribe">
                       <div class="form-field">
                         <input
