--- a/services.html
+++ b/services.html
@@ -34,7 +34,9 @@
 	<!-- CS Select -->
 	<link rel="stylesheet" href="css/cs-select.css">
 	<link rel="stylesheet" href="css/cs-skin-border.css">
-
+	<!-- bootstrap -->
+    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="css/nice-select.css" type="text/css">
 	<!-- Themify Icons -->
 	<link rel="stylesheet" href="css/themify-icons.css">
 	<!-- Flat Icon -->
@@ -46,7 +48,8 @@
 	
 	<!-- Style -->
 	<link rel="stylesheet" href="css/style.css">
-
+     
+	<link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 	<!-- FOR IE9 below -->
@@ -101,7 +104,7 @@
 						<span><i class="ti-location-pin"></i></span>
 						<div class="desc">
 							<h3>Accessible Location</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>It is one of the greatest places to stay because it is located near the city and also to the popular tourist attraction, making it convenient for visitors.</p>
 						</div>
 					</div>
 				</div>
@@ -143,16 +146,288 @@
 				</div>
 				<div class="col-md-4">
 					<div class="services">
-						<span><i class="ti-location-pin"></i></span>
+						<span><i class="ti-wheelchair"></i></span>
 						<div class="desc">
 							<h3>Accessible Location</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<p>It is one of the greatest places to stay because it is located near the city and also to the popular tourist attraction, making it convenient for visitors.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
+	
+	<!-- Hotel Facilities -->
+	<div id="hotel-facilities">
+		<div class="container">
+		  <div class="row">
+			<div class="col-md-12">
+			  <div class="section-title text-center">
+				<h2>Hotel Facilities</h2>
+			  </div>
+			</div>
+		  </div>
+
+		  <div id="tabs">
+			<nav class="tabs-nav">
+			  <a href="#" class="active" data-tab="tab1">
+				<i class="flaticon-restaurant icon"></i>
+				<span>Restaurant</span>
+			  </a>
+			  <a href="#" data-tab="tab2">
+				<i class="flaticon-cup icon"></i>
+				<span>Bar</span>
+			  </a>
+			  <a href="#" data-tab="tab3">
+				<i class="flaticon-car icon"></i>
+				<span>Pick-up</span>
+			  </a>
+			  <a href="#" data-tab="tab4">
+				<i class="flaticon-swimming icon"></i>
+				<span>Swimming Pool</span>
+			  </a>
+			  <a href="#" data-tab="tab5">
+				<i class="flaticon-massage icon"></i>
+				<span>Spa</span>
+			  </a>
+			  <a href="#" data-tab="tab6">
+				<i class="flaticon-bicycle icon"></i>
+				<span>Gym</span>
+			  </a>
+			</nav>
+			<div class="tab-content-container">
+			  <div class="tab-content active show" data-tab-content="tab1">
+				<div class="container">
+				  <div class="row">
+					<div class="col-md-6">
+					  <img
+						src="images/tab_img_1.jpg"
+						class="img-responsive"
+						alt="Image"
+					  />
+					</div>
+					<div class="col-md-6">
+					  <span class="super-heading-sm">World Class</span>
+					  <h3 class="heading">Restaurant</h3>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Molestias officia perferendis modi impedit, rem
+						quasi veritatis. Consectetur obcaecati incidunt, quae
+						rerum, accusamus sapiente fuga vero at. Quia, labore,
+						reprehenderit illum dolorem quae facilis reiciendis
+						quas similique totam sequi ducimus temporibus ex nemo,
+						omnis perferendis earum fugit impedit molestias animi
+						vitae.
+					  </p>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Laboriosam neque blanditiis eveniet nesciunt,
+						beatae similique doloribus, ex impedit rem officiis
+						placeat dignissimos molestias temporibus, in! Minima
+						quod, consequatur neque aliquam.
+					  </p>
+					  <p class="service-hour">
+						<span>Service Hours</span>
+						<strong>7:30 AM - 8:00 PM</strong>
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="tab-content" data-tab-content="tab2">
+				<div class="container">
+				  <div class="row">
+					<div class="col-md-6">
+					  <img
+						src="images/tab_img_2.jpg"
+						class="img-responsive"
+						alt="Image"
+					  />
+					</div>
+					<div class="col-md-6">
+					  <span class="super-heading-sm">World Class</span>
+					  <h3 class="heading">Bars</h3>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Molestias officia perferendis modi impedit, rem
+						quasi veritatis. Consectetur obcaecati incidunt, quae
+						rerum, accusamus sapiente fuga vero at. Quia, labore,
+						reprehenderit illum dolorem quae facilis reiciendis
+						quas similique totam sequi ducimus temporibus ex nemo,
+						omnis perferendis earum fugit impedit molestias animi
+						vitae.
+					  </p>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Laboriosam neque blanditiis eveniet nesciunt,
+						beatae similique doloribus, ex impedit rem officiis
+						placeat dignissimos molestias temporibus, in! Minima
+						quod, consequatur neque aliquam.
+					  </p>
+					  <p class="service-hour">
+						<span>Service Hours</span>
+						<strong>7:30 AM - 8:00 PM</strong>
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="tab-content" data-tab-content="tab3">
+				<div class="container">
+				  <div class="row">
+					<div class="col-md-6">
+					  <img
+						src="images/tab_img_3.jpg"
+						class="img-responsive"
+						alt="Image"
+					  />
+					</div>
+					<div class="col-md-6">
+					  <span class="super-heading-sm">World Class</span>
+					  <h3 class="heading">Pick Up</h3>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Molestias officia perferendis modi impedit, rem
+						quasi veritatis. Consectetur obcaecati incidunt, quae
+						rerum, accusamus sapiente fuga vero at. Quia, labore,
+						reprehenderit illum dolorem quae facilis reiciendis
+						quas similique totam sequi ducimus temporibus ex nemo,
+						omnis perferendis earum fugit impedit molestias animi
+						vitae.
+					  </p>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Laboriosam neque blanditiis eveniet nesciunt,
+						beatae similique doloribus, ex impedit rem officiis
+						placeat dignissimos molestias temporibus, in! Minima
+						quod, consequatur neque aliquam.
+					  </p>
+					  <p class="service-hour">
+						<span>Service Hours</span>
+						<strong>7:30 AM - 8:00 PM</strong>
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="tab-content" data-tab-content="tab4">
+				<div class="container">
+				  <div class="row">
+					<div class="col-md-6">
+					  <img
+						src="images/tab_img_4.jpg"
+						class="img-responsive"
+						alt="Image"
+					  />
+					</div>
+					<div class="col-md-6">
+					  <span class="super-heading-sm">World Class</span>
+					  <h3 class="heading">Swimming Pool</h3>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Molestias officia perferendis modi impedit, rem
+						quasi veritatis. Consectetur obcaecati incidunt, quae
+						rerum, accusamus sapiente fuga vero at. Quia, labore,
+						reprehenderit illum dolorem quae facilis reiciendis
+						quas similique totam sequi ducimus temporibus ex nemo,
+						omnis perferendis earum fugit impedit molestias animi
+						vitae.
+					  </p>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Laboriosam neque blanditiis eveniet nesciunt,
+						beatae similique doloribus, ex impedit rem officiis
+						placeat dignissimos molestias temporibus, in! Minima
+						quod, consequatur neque aliquam.
+					  </p>
+					  <p class="service-hour">
+						<span>Service Hours</span>
+						<strong>7:30 AM - 8:00 PM</strong>
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="tab-content" data-tab-content="tab5">
+				<div class="container">
+				  <div class="row">
+					<div class="col-md-6">
+					  <img
+						src="images/tab_img_5.jpg"
+						class="img-responsive"
+						alt="Image"
+					  />
+					</div>
+					<div class="col-md-6">
+					  <span class="super-heading-sm">World Class</span>
+					  <h3 class="heading">Spa</h3>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Molestias officia perferendis modi impedit, rem
+						quasi veritatis. Consectetur obcaecati incidunt, quae
+						rerum, accusamus sapiente fuga vero at. Quia, labore,
+						reprehenderit illum dolorem quae facilis reiciendis
+						quas similique totam sequi ducimus temporibus ex nemo,
+						omnis perferendis earum fugit impedit molestias animi
+						vitae.
+					  </p>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Laboriosam neque blanditiis eveniet nesciunt,
+						beatae similique doloribus, ex impedit rem officiis
+						placeat dignissimos molestias temporibus, in! Minima
+						quod, consequatur neque aliquam.
+					  </p>
+					  <p class="service-hour">
+						<span>Service Hours</span>
+						<strong>7:30 AM - 8:00 PM</strong>
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			  <div class="tab-content" data-tab-content="tab6">
+				<div class="container">
+				  <div class="row">
+					<div class="col-md-6">
+					  <img
+						src="images/tab_img_6.jpg"
+						class="img-responsive"
+						alt="Image"
+					  />
+					</div>
+					<div class="col-md-6">
+					  <span class="super-heading-sm">World Class</span>
+					  <h3 class="heading">Gym</h3>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Molestias officia perferendis modi impedit, rem
+						quasi veritatis. Consectetur obcaecati incidunt, quae
+						rerum, accusamus sapiente fuga vero at. Quia, labore,
+						reprehenderit illum dolorem quae facilis reiciendis
+						quas similique totam sequi ducimus temporibus ex nemo,
+						omnis perferendis earum fugit impedit molestias animi
+						vitae.
+					  </p>
+					  <p>
+						Lorem ipsum dolor sit amet, consectetur adipisicing
+						elit. Laboriosam neque blanditiis eveniet nesciunt,
+						beatae similique doloribus, ex impedit rem officiis
+						placeat dignissimos molestias temporibus, in! Minima
+						quod, consequatur neque aliquam.
+					  </p>
+					  <p class="service-hour">
+						<span>Service Hours</span>
+						<strong>7:30 AM - 8:00 PM</strong>
+					  </p>
+					</div>
+				  </div>
+				</div>
+			  </div>
+			</div>
+		  </div>
+		</div>
+	  </div>
 
 	<footer id="footer" class="fh5co-bg-color">
 		<div class="container">
