--- a/index.html
+++ b/index.html
@@ -161,12 +161,15 @@
             </div>
           </div>
         </div>
-
+       
         <div id="featured-rooms" class="fh5co-bg-color">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
                 <div class="section-title text-center">
+                  <br>
+                  <br>
+                  <br>
                   <h2>Featured Hotels</h2>
                 </div>
               </div>
@@ -210,7 +213,7 @@
                     </div>
                   </div>
                   <div class="desc">
-                    <h3>Hotel Bora</h3>
+                    <h3>Premium Room</h3>
                     <p>
                       Pellentesque habitant morbi tristique senectus et netus
                       ett mauada fames ac turpis egestas. Etiam euismod tempor
@@ -233,13 +236,8 @@
                     </div>
                   </div>
                   <div class="desc">
-                    <h3>D’Morvie</h3>
-                    <p>
-                      Pellentesque habitant morbi tristique senectus et netus
-                      ett mauada fames ac turpis egestas. Etiam euismod tempor
-                      leo, in suscipit urna condimentum sed.
-                    </p>
-                    <p>
+                    <h3>Premium King Room</h3>
+                    <p>When you can feel better, why just feel like home? This room is one of the greatest to stay in because it is furnished with all the beautiful furniture. A king-sized bed and a big TV are included. What else could you wish for?</p>
                       <a href="#" class="btn btn-primary btn-luxe-primary"
                         >Book Now <i class="ti-angle-right"></i
                       ></a>
@@ -303,7 +301,7 @@
             <div class="row">
               <div class="col-md-12">
                 <div class="section-title text-center">
-                  <h2>Happy Customer Says...</h2>
+                  <h2>testimonials</h2>
                 </div>
               </div>
             </div>
@@ -315,7 +313,7 @@
                     further. We were upgraded free of charge to the Premium
                     Suite, thanks so much&rdquo;
                   </blockquote>
-                  <p class="author"><cite>John Doe</cite></p>
+                  <p class="author"><cite>Lasyaa</cite></p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -325,7 +323,7 @@
                     here, the staff were so friendly and attentive. Highly
                     Recommended&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Rob Smith</cite></p>
+                  <p class="author"><cite>Srihitha</cite></p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -335,7 +333,7 @@
                     further. We were upgraded free of charge to the Premium
                     Suite, thanks so much&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Jane Doe</cite></p>
+                  <p class="author"><cite>Jay</cite></p>
                 </div>
               </div>
             </div>
