updated home page

--- a/index.html
+++ b/index.html
@@ -161,15 +161,15 @@
             </div>
           </div>
         </div>
-       
+
         <div id="featured-rooms" class="fh5co-bg-color">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
                 <div class="section-title text-center">
-                  <br>
-                  <br>
-                  <br>
+                  <br />
+                  <br />
+                  <br />
                   <h2>Featured Hotels</h2>
                 </div>
               </div>
@@ -182,17 +182,19 @@
                   style="background-image: url(images/hotel_feture_1.jpg)"
                 >
                   <div class="descrip text-center">
-                    <p><small>For as low as</small><span>$100/night</span></p>
+                    <p><small>For as low as</small><span>Rs 15,000/night</span></p>
                   </div>
                 </div>
                 <div class="desc">
                   <h3>Deluxe Room</h3>
                   <p>
-                    Pellentesque habitant morbi tristique senectus et netus ett
-                    mauada fames ac turpis egestas. Etiam euismod tempor leo, in
-                    suscipit urna condimentum sed. Vivamus augue enim,
-                    consectetur ac interdum a, pulvinar ac massa. Nullam
-                    malesuada congue
+                    Deluxe rooms are modernly decorated, can accommodate up to
+                    two people, are completely soundproofed, and are outfitted
+                    with high-tech amenities. Relax in a beautiful, light, and
+                    spacious room with stunning natural vistas for instant zen.
+                    After a long day, relax in the bath tub before slipping
+                    between crisp Egyptian cotton sheets for the ultimate good
+                    night's sleep. 
                   </p>
                   <p>
                     <a href="#" class="btn btn-primary btn-luxe-primary"
@@ -209,15 +211,16 @@
                     style="background-image: url(images/hotel_feture_2.jpg)"
                   >
                     <div class="descrip text-center">
-                      <p><small>For as low as</small><span>$99/night</span></p>
+                      <p><small>For as low as</small><span>Rs 10,000/night</span></p>
                     </div>
                   </div>
                   <div class="desc">
                     <h3>Premium Room</h3>
                     <p>
-                      Pellentesque habitant morbi tristique senectus et netus
-                      ett mauada fames ac turpis egestas. Etiam euismod tempor
-                      leo, in suscipit urna condimentum sed.
+                      Premium Room embodies grandeur and exclusivity through its
+                      unique design and refined elegance. The Premium Room has
+                      one large bedroom and an attached bathroom with rain
+                      shower cubicles.
                     </p>
                     <p>
                       <a href="#" class="btn btn-primary btn-luxe-primary"
@@ -232,12 +235,19 @@
                     style="background-image: url(images/hotel_feture_3.jpg)"
                   >
                     <div class="descrip text-center">
-                      <p><small>For as low as</small><span>$99/night</span></p>
+                      <p><small>For as low as</small><span>Rs 20,000/night</span></p>
                     </div>
                   </div>
                   <div class="desc">
                     <h3>Premium King Room</h3>
-                    <p>When you can feel better, why just feel like home? This room is one of the greatest to stay in because it is furnished with all the beautiful furniture. A king-sized bed and a big TV are included. What else could you wish for?</p>
+                    <p>
+                      When you can feel better, why just feel like home? This
+                      room is one of the greatest to stay in because it is
+                      furnished with all the beautiful furniture. A king-sized
+                      bed and a big TV are included. What else could you wish
+                      for?
+                    </p>
+                    <p>
                       <a href="#" class="btn btn-primary btn-luxe-primary"
                         >Book Now <i class="ti-angle-right"></i
                       ></a>
@@ -309,19 +319,28 @@
               <div class="col-md-4">
                 <div class="testimony">
                   <blockquote>
-                    &ldquo;If you’re looking for a top quality hotel look no
-                    further. We were upgraded free of charge to the Premium
-                    Suite, thanks so much&rdquo;
+                    &ldquo;Great Service. I've hosted hundreds of events at
+                    dozens of hotels over the last two decades, and I can't
+                    recall ever having things run as smoothly as they did for us
+                    at the Paradise. We only had a few "last-minute changes,"
+                    but they were handled flawlessly. The food and presentation
+                    were both excellent. The attendees lavished us with
+                    praise.&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Lasyaa</cite></p>
+                  <p class="author"><cite>Kesav</cite></p>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="testimony">
                   <blockquote>
-                    &ldquo;Me and my wife had a delightful weekend get away
-                    here, the staff were so friendly and attentive. Highly
-                    Recommended&rdquo;
+                    &ldquo;The hotel staff is outstanding. The restaurant
+                    manager and his staff were outstanding! Excellent food and a
+                    good selection. We chose Premium King Room a, which provided
+                    excellent value for money. The rooms are spacious and clean,
+                    as one would expect from a 5 star hotel. They brought a
+                    beautiful birthday cake to our room to celebrate my friend's
+                    50th birthday! This hotel is truly made up of its staff! I
+                    can't wait to visit agin&rdquo;
                   </blockquote>
                   <p class="author"><cite>Srihitha</cite></p>
                 </div>
@@ -329,9 +348,11 @@
               <div class="col-md-4">
                 <div class="testimony">
                   <blockquote>
-                    &ldquo;If you’re looking for a top quality hotel look no
-                    further. We were upgraded free of charge to the Premium
-                    Suite, thanks so much&rdquo;
+                    &ldquo;We thoroughly enjoyed our stay. The staffs were
+                    always motivated to help us. The food was excellent, the
+                    chef ensured that our pallet needs were met. The hotel
+                    ambience was lovely & very serene. We look forward to coming
+                    back. Feel very revitalized after spa treatments&rdquo;
                   </blockquote>
                   <p class="author"><cite>Jay</cite></p>
                 </div>
