edited the placeholder text

--- a/index.html
+++ b/index.html
@@ -182,7 +182,9 @@
                   style="background-image: url(images/hotel_feture_1.jpg)"
                 >
                   <div class="descrip text-center">
-                    <p><small>For as low as</small><span>Rs 15,000/night</span></p>
+                    <p>
+                      <small>For as low as</small><span>Rs 15,000/night</span>
+                    </p>
                   </div>
                 </div>
                 <div class="desc">
@@ -211,7 +213,9 @@
                     style="background-image: url(images/hotel_feture_2.jpg)"
                   >
                     <div class="descrip text-center">
-                      <p><small>For as low as</small><span>Rs 10,000/night</span></p>
+                      <p>
+                        <small>For as low as</small><span>Rs 10,000/night</span>
+                      </p>
                     </div>
                   </div>
                   <div class="desc">
@@ -235,7 +239,9 @@
                     style="background-image: url(images/hotel_feture_3.jpg)"
                   >
                     <div class="descrip text-center">
-                      <p><small>For as low as</small><span>Rs 20,000/night</span></p>
+                      <p>
+                        <small>For as low as</small><span>Rs 20,000/night</span>
+                      </p>
                     </div>
                   </div>
                   <div class="desc">
@@ -339,10 +345,10 @@
                     excellent value for money. The rooms are spacious and clean,
                     as one would expect from a 5 star hotel. They brought a
                     beautiful birthday cake to our room to celebrate my friend's
-                    50th birthday! This hotel is truly made up of its staff! I
+                    25th birthday! This hotel is truly made up of its staff! I
                     can't wait to visit agin&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Srihitha</cite></p>
+                  <p class="author"><cite>Vaishnavi</cite></p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -354,7 +360,7 @@
                     ambience was lovely & very serene. We look forward to coming
                     back. Feel very revitalized after spa treatments&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Jay</cite></p>
+                  <p class="author"><cite>Srihitha</cite></p>
                 </div>
               </div>
             </div>
