--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     25th birthday! This hotel is truly made up of its staff! I
                     can't wait to visit agin&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Vaishnavi</cite></p>
+                  <p class="author"><cite>Madhu</cite></p>
                 </div>
               </div>
               <div class="col-md-4">
@@ -360,7 +360,7 @@
                     ambience was lovely & very serene. We look forward to coming
                     back. Feel very revitalized after spa treatments&rdquo;
                   </blockquote>
-                  <p class="author"><cite>Srihitha</cite></p>
+                  <p class="author"><cite>Gopal</cite></p>
                 </div>
               </div>
             </div>
